--- a/index.html
+++ b/index.html
@@ -3,47 +3,178 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Demo Meta Pixel</title>
+  <title>Melisa Almada Meta Pro Team</title>
 
-  <!-- Meta Pixel base: sustituye YOUR_PIXEL_ID -->
- <!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1332485261412186');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1332485261412186&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
+  <!-- Meta Pixel Code (ID: 1332485261412186) -->
+  <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1332485261412186');
+    fbq('track', 'PageView');
+  </script>
+  <noscript>
+    <img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=1332485261412186&ev=PageView&noscript=1" />
+  </noscript>
+  <!-- End Meta Pixel Code -->
 
   <style>
-    body{font-family:system-ui,Arial,Helvetica,sans-serif;margin:2rem;}
-    .btn{display:inline-block;padding:0.6rem 1rem;border-radius:6px;border:1px solid #222;text-decoration:none;cursor:pointer}
+    /* Paleta y layout */
+    :root{
+      --meta-blue:#1877F2;      /* azul Meta (FB) */
+      --meta-blue-2:#2D88FF;    /* gradiente secundario */
+      --bg-accent: linear-gradient(135deg,var(--meta-blue-2),var(--meta-blue));
+      --surface: rgba(255,255,255,0.06);
+      --glass: rgba(255,255,255,0.06);
+      --text-on-blue: #ffffff;
+      --muted: rgba(255,255,255,0.85);
+      --shadow: 0 8px 24px rgba(4,17,29,0.35);
+    }
+
+    html,body{
+      height:100%;
+      margin:0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      background: var(--bg-accent);
+      color:var(--text-on-blue);
+    }
+
+    /* Centrado vertical/horizontal */
+    .wrap{
+      min-height:100vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:2rem;
+      box-sizing:border-box;
+    }
+
+    .card{
+      width:100%;
+      max-width:920px;
+      background: linear-gradient(180deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02));
+      border-radius:16px;
+      padding:3rem;
+      box-shadow: var(--shadow);
+      text-align:center;
+      backdrop-filter: blur(6px);
+      border: 1px solid rgba(255,255,255,0.06);
+    }
+
+    /* Título grande y responsive */
+    h1{
+      margin:0 0 1.2rem 0;
+      line-height:1;
+      font-weight:700;
+      color:var(--text-on-blue);
+      font-size: clamp(2.2rem, 6vw, 4rem); /* responsivo: entre ~35px y 64px */
+      letter-spacing: -0.02em;
+      text-align:center;
+    }
+
+    p.lead{
+      margin:0 0 2rem 0;
+      color:var(--muted);
+      font-size:1.05rem;
+    }
+
+    /* Botones - diseño llamativo */
+    .controls{
+      display:flex;
+      gap:1rem;
+      justify-content:center;
+      flex-wrap:wrap;
+    }
+
+    .btn{
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      padding:0.9rem 1.4rem;
+      min-width:150px;
+      border-radius:12px;
+      border:none;
+      cursor:pointer;
+      font-weight:600;
+      font-size:1rem;
+      transition: transform .14s ease, box-shadow .14s ease, opacity .14s;
+      box-shadow: 0 6px 18px rgba(4,17,29,0.28);
+      color:var(--text-on-blue);
+      text-decoration:none;
+    }
+
+    .btn:active{ transform: translateY(1px); }
+
+    .btn-primary{
+      background: linear-gradient(90deg,var(--meta-blue-2),var(--meta-blue));
+      box-shadow: 0 12px 30px rgba(24,119,242,0.28);
+      border: 1px solid rgba(255,255,255,0.08);
+    }
+    .btn-primary:hover{
+      transform:translateY(-4px);
+      box-shadow: 0 20px 38px rgba(24,119,242,0.30);
+      opacity:0.98;
+    }
+
+    .btn-ghost{
+      background: transparent;
+      border: 1px solid rgba(255,255,255,0.14);
+      color:var(--text-on-blue);
+      backdrop-filter: blur(2px);
+    }
+    .btn-ghost:hover{
+      transform:translateY(-3px);
+      box-shadow: 0 10px 20px rgba(4,17,29,0.22);
+    }
+
+    /* Pequeños detalles */
+    .small{
+      display:block;
+      margin-top:1.6rem;
+      color: rgba(255,255,255,0.78);
+      font-size:0.95rem;
+    }
+
+    /* Responsive: ajustar padding en móviles */
+    @media (max-width:520px){
+      .card{ padding:2rem; border-radius:12px; }
+      .btn{ min-width:120px; padding:0.75rem 1rem; font-size:.98rem; }
+    }
   </style>
 </head>
 <body>
-  <h1>Demo Meta Pixel</h1>
-  <p>Pixel ID: <strong>YOUR_PIXEL_ID</strong></p>
+  <div class="wrap">
+    <div class="card" role="main" aria-labelledby="page-title">
+      <h1 id="page-title">Melisa Almada Meta Pro Team</h1>
+      <p class="lead">Página demo para formación — Meta Pixel activo (ID: <strong>1332485261412186</strong>).</p>
 
-  <button class="btn" id="leadBtn">Simular Lead</button>
-  <button class="btn" id="purchaseBtn">Simular Purchase</button>
+      <div class="controls" role="region" aria-label="Controles de demostración">
+        <button id="leadBtn" class="btn btn-primary" aria-pressed="false">Enviar Lead</button>
+        <button id="purchaseBtn" class="btn btn-ghost" aria-pressed="false">Enviar Purchase</button>
+      </div>
+
+      <span class="small">Consejo: desactiva bloqueadores de anuncios y abre Meta Pixel Helper para ver los eventos en tiempo real.</span>
+    </div>
+  </div>
 
   <script>
+    // Eventos para la demo — envía parámetros visibles en Events Manager (Test events)
     document.getElementById('leadBtn').addEventListener('click', function(){
-      fbq('track','Lead',{value:0.00, currency:'BRL'});
-      alert('Evento Lead enviado');
+      fbq('track','Lead',{value:0.00,currency:'BRL',source:'demo-page'});
+      this.setAttribute('aria-pressed','true');
+      alert('Evento Lead enviado (ver en Pixel Helper / Events Manager).');
     });
+
     document.getElementById('purchaseBtn').addEventListener('click', function(){
-      fbq('track','Purchase',{value:49.99, currency:'BRL',content_ids:['SKU-123']});
-      alert('Evento Purchase enviado');
+      fbq('track','Purchase',{value:49.99,currency:'BRL',content_ids:['SKU-META-DEMO']});
+      this.setAttribute('aria-pressed','true');
+      alert('Evento Purchase enviado (ver en Pixel Helper / Events Manager).');
     });
   </script>
 </body>
