--- a/index.html
+++ b/index.html
@@ -25,16 +25,15 @@
   <!-- End Meta Pixel Code -->
 
   <style>
-    /* Paleta y layout */
+    /* Paleta - tonos más opacos/menos saturados */
     :root{
-      --meta-blue:#1877F2;      /* azul Meta (FB) */
-      --meta-blue-2:#2D88FF;    /* gradiente secundario */
-      --bg-accent: linear-gradient(135deg,var(--meta-blue-2),var(--meta-blue));
-      --surface: rgba(255,255,255,0.06);
-      --glass: rgba(255,255,255,0.06);
+      --meta-blue: #155db8;      /* azul más sobrio */
+      --meta-blue-2: #1e66c7;    /* degradado secundario, menos brillante */
+      --bg-accent: linear-gradient(135deg, rgba(21,93,184,0.95), rgba(30,102,199,0.95));
+      --surface: rgba(255,255,255,0.035); /* tarjeta levemente translúcida */
       --text-on-blue: #ffffff;
       --muted: rgba(255,255,255,0.85);
-      --shadow: 0 8px 24px rgba(4,17,29,0.35);
+      --shadow: 0 8px 20px rgba(4,17,29,0.22); /* sombra más sutil */
     }
 
     html,body{
@@ -58,33 +57,33 @@
     .card{
       width:100%;
       max-width:920px;
-      background: linear-gradient(180deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02));
-      border-radius:16px;
-      padding:3rem;
+      background: linear-gradient(180deg, rgba(255,255,255,0.035), rgba(255,255,255,0.02));
+      border-radius:14px;
+      padding:2.8rem;
       box-shadow: var(--shadow);
       text-align:center;
       backdrop-filter: blur(6px);
-      border: 1px solid rgba(255,255,255,0.06);
+      border: 1px solid rgba(255,255,255,0.05);
     }
 
     /* Título grande y responsive */
     h1{
-      margin:0 0 1.2rem 0;
+      margin:0 0 1rem 0;
       line-height:1;
       font-weight:700;
       color:var(--text-on-blue);
-      font-size: clamp(2.2rem, 6vw, 4rem); /* responsivo: entre ~35px y 64px */
+      font-size: clamp(2.2rem, 6vw, 3.6rem); /* un poco más contenido que antes */
       letter-spacing: -0.02em;
       text-align:center;
     }
 
     p.lead{
-      margin:0 0 2rem 0;
+      margin:0 0 1.8rem 0;
       color:var(--muted);
       font-size:1.05rem;
     }
 
-    /* Botones - diseño llamativo */
+    /* Botones - diseño llamativo pero opacado */
     .controls{
       display:flex;
       gap:1rem;
@@ -96,15 +95,15 @@
       display:inline-flex;
       align-items:center;
       justify-content:center;
-      padding:0.9rem 1.4rem;
+      padding:0.85rem 1.3rem;
       min-width:150px;
-      border-radius:12px;
+      border-radius:10px;
       border:none;
       cursor:pointer;
       font-weight:600;
       font-size:1rem;
-      transition: transform .14s ease, box-shadow .14s ease, opacity .14s;
-      box-shadow: 0 6px 18px rgba(4,17,29,0.28);
+      transition: transform .12s ease, box-shadow .12s ease, opacity .12s;
+      box-shadow: 0 8px 18px rgba(4,17,29,0.16);
       color:var(--text-on-blue);
       text-decoration:none;
     }
@@ -112,39 +111,39 @@
     .btn:active{ transform: translateY(1px); }
 
     .btn-primary{
-      background: linear-gradient(90deg,var(--meta-blue-2),var(--meta-blue));
-      box-shadow: 0 12px 30px rgba(24,119,242,0.28);
-      border: 1px solid rgba(255,255,255,0.08);
+      background: linear-gradient(90deg, rgba(30,102,199,0.95), rgba(21,93,184,0.95));
+      box-shadow: 0 10px 26px rgba(21,93,184,0.18);
+      border: 1px solid rgba(255,255,255,0.06);
     }
     .btn-primary:hover{
-      transform:translateY(-4px);
-      box-shadow: 0 20px 38px rgba(24,119,242,0.30);
+      transform:translateY(-3px);
+      box-shadow: 0 16px 34px rgba(21,93,184,0.20);
       opacity:0.98;
     }
 
     .btn-ghost{
-      background: transparent;
-      border: 1px solid rgba(255,255,255,0.14);
+      background: rgba(255,255,255,0.03);
+      border: 1px solid rgba(255,255,255,0.10);
       color:var(--text-on-blue);
       backdrop-filter: blur(2px);
     }
     .btn-ghost:hover{
-      transform:translateY(-3px);
-      box-shadow: 0 10px 20px rgba(4,17,29,0.22);
+      transform:translateY(-2px);
+      box-shadow: 0 10px 20px rgba(4,17,29,0.14);
     }
 
     /* Pequeños detalles */
     .small{
       display:block;
-      margin-top:1.6rem;
+      margin-top:1.4rem;
       color: rgba(255,255,255,0.78);
       font-size:0.95rem;
     }
 
     /* Responsive: ajustar padding en móviles */
     @media (max-width:520px){
-      .card{ padding:2rem; border-radius:12px; }
-      .btn{ min-width:120px; padding:0.75rem 1rem; font-size:.98rem; }
+      .card{ padding:1.6rem; border-radius:12px; }
+      .btn{ min-width:120px; padding:0.7rem 0.95rem; font-size:.96rem; }
     }
   </style>
 </head>
