--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Melisa Almada Meta Pro Team</title>
+  <title>Sitio de Prueba Pixel</title>
 
   <!-- Meta Pixel Code (ID: 1332485261412186) -->
   <script>
