--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Sitio de Prueba Pixel</title>
+  <title>Entrenamiento Melisa #XXX</title>
 
   <!-- Meta Pixel Code (ID: 1332485261412186) -->
   <script>
@@ -72,7 +72,7 @@
       line-height:1;
       font-weight:700;
       color:var(--text-on-blue);
-      font-size: clamp(2.2rem, 6vw, 3.6rem); /* un poco más contenido que antes */
+      font-size: clamp(2.2rem, 6vw, 3.6rem);
       letter-spacing: -0.02em;
       text-align:center;
     }
@@ -150,7 +150,7 @@
 <body>
   <div class="wrap">
     <div class="card" role="main" aria-labelledby="page-title">
-      <h1 id="page-title">Melisa Almada Meta Pro Team</h1>
+      <h1 id="page-title">Entrenamiento Melisa #XXX</h1>
       <p class="lead">Página demo para formación — Meta Pixel activo (ID: <strong>1332485261412186</strong>).</p>
 
       <div class="controls" role="region" aria-label="Controles de demostración">
