--- a/producto.html
+++ b/producto.html
@@ -1,54 +1,58 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Producto - Entrenamiento Melisa #XXX</title>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        background: linear-gradient(135deg, #6a5acd, #00ced1);
-        margin: 0;
-        padding: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        color: white;
-        text-align: center;
-    }
-    img {
-        max-width: 250px;
-        width: 80%;
-        border-radius: 15px;
-        margin-bottom: 20px;
-        box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-    }
-    a.button {
-        background-color: rgba(255,255,255,0.15);
-        padding: 15px 30px;
-        text-decoration: none;
-        color: white;
-        border-radius: 30px;
-        font-size: 1.2rem;
-        backdrop-filter: blur(5px);
-        transition: all 0.3s ease;
-    }
-    a.button:hover {
-        background-color: rgba(255,255,255,0.3);
-        transform: scale(1.05);
-    }
-    @media (max-width: 600px) {
-        a.button {
-            font-size: 1rem;
-            padding: 12px 20px;
-        }
-    }
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Entrenamiento Melisa #XXX — Producto</title>
+
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Meta Pixel Base (ID: 1332485261412186) -->
+  <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1332485261412186');
+    fbq('track', 'PageView');
+    fbq('track', 'ViewContent'); /* evento de visualización de producto */
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=1332485261412186&ev=PageView&noscript=1" /></noscript>
 </head>
 <body>
-    <img src="producto.jpg" alt="Producto Entrenamiento Melisa">
-    <a href="#" class="button">Agregar al carrito</a>
+  <main class="site" role="main" style="padding-top:2rem; padding-bottom:2rem;">
+    <section style="max-width:900px;margin:0 auto;">
+      <div class="card" style="display:flex;flex-direction:column;align-items:center;">
+        <img class="product-img" src="producto.jpg" alt="Producto Entrenamiento Melisa">
+        <h2 class="product-title">Pack Entrenamiento Melisa — Demo</h2>
+        <p class="product-desc">Un plan hipotético para la formación de agentes. Usa los botones para enviar eventos a Meta.</p>
+
+        <div style="display:flex;gap:0.9rem;margin-top:0.8rem;flex-wrap:wrap;">
+          <button id="addCart" class="btn btn-primary" type="button">Agregar al carrito</button>
+          <a href="index.html" class="btn btn-outline" role="button">Volver</a>
+        </div>
+
+        <p class="small" style="margin-top:0.9rem;">Nota: desactiva ad-blockers para pruebas en vivo.</p>
+      </div>
+    </section>
+  </main>
+
+  <script>
+    // Evento AddToCart - envía datos con parámetros (visibles en Test Events)
+    document.getElementById('addCart').addEventListener('click', function(){
+      fbq('track','AddToCart',{
+        value: 79.90,
+        currency: 'BRL',
+        content_name: 'Pack Entrenamiento Melisa - Demo',
+        content_ids: ['SKU-ENTRE1']
+      });
+      alert('Evento AddToCart enviado (ver en Pixel Helper / Events Manager).');
+    });
+  </script>
 </body>
 </html>
